Изменила позиционирование декора для блока с товарами

--- a/media.css
+++ b/media.css
@@ -81,9 +81,14 @@
   
   .offers-cards {
     flex-wrap: nowrap;
+    padding-top: 60px;
   }
 
   .offers-desktop-decor {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     align-items: start;
